[gd_scene load_steps=4 format=3 uid="uid://c8yay001a2b3c"]

[ext_resource type="Script" uid="uid://cap7xh1rfchn4" path="res://scenes/levels/GameScene.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://uhiusabusitx" path="res://assets/image/space_background.png" id="2_texture"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(500, 500)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_script")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -1024.0
offset_right = 1024.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_texture")
stretch_mode = 4

[node name="WordSpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameZones" type="Node2D" parent="."]

[node name="InactiveZone" type="ColorRect" parent="GameZones"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.5, 0.5, 0.3)

[node name="ActiveZone" type="Area2D" parent="GameZones"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameZones/ActiveZone"]
shape = SubResource("RectangleShape2D_1")
debug_color = Color(0, 1, 0, 0.41960785)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 160
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Tapez les mots quand ils entrent dans la zone grise !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentInputLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 24
text = "Saisie : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="WordContainer" type="Node2D" parent="."]
